k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: enterprise-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: enterprise-auth:dev
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: enterprise-dev
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 31082
  type: NodePort
