k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enterprise-ingress
  namespace: enterprise-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dev.example.local
      http:
        paths:
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
